<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MusicPlayer" android:background="@drawable/teal3">

    <TextView
            android:text="@string/song_name"
            android:layout_width="313dp"
            android:layout_height="77dp"
            android:id="@+id/textView"
            android:textSize="30sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold|italic"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="11dp"
            app:layout_constraintHorizontal_bias="0.611"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.637"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <ImageButton
            android:layout_width="87dp"
            android:layout_height="75dp"
            app:srcCompat="@android:drawable/ic_media_ff"
            android:id="@+id/next"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="140dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="280dp"
            android:contentDescription="@string/forward"
            android:foreground="@android:drawable/ic_media_next"
            android:background="#00070101" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="44dp"/>

    <ImageButton
            android:layout_width="90dp"
            android:layout_height="81dp"
            app:srcCompat="@android:drawable/ic_media_rew"
            android:id="@+id/previous"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toStartOf="@+id/pause"
            android:layout_marginEnd="64dp"
            android:contentDescription="@string/reverse"
            android:foreground="@android:drawable/ic_media_previous" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.798" android:background="#00070101"
            style="@style/Widget.AppCompat.ImageButton"/>

    <ImageButton
            android:layout_width="96dp"
            android:layout_height="89dp"
            app:srcCompat="@android:drawable/ic_media_pause"
            android:id="@+id/pause"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="148dp"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/pausebutton"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.8"
            android:background="#00070101"/>

    <ImageButton
            android:layout_width="121dp"
            android:layout_height="103dp"
            app:srcCompat="@android:drawable/ic_media_play"
            android:id="@+id/play"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="172dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="161dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/playbutton" app:layout_constraintHorizontal_bias="0.883"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.818" android:background="#00070101"
            app:layout_constraintBottom_toBottomOf="parent"/>


    <Button
            android:layout_width="70dp"
            android:layout_height="66dp"
            android:onClick="connect"
            android:id="@+id/connectButt"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" style="@android:style/Widget.Button"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintHorizontal_bias="0.895"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/next" app:layout_constraintVertical_bias="0.0"
            android:gravity="center|fill" android:drawingCacheQuality="high"
            android:scrollbarAlwaysDrawHorizontalTrack="false" android:drawableBottom="@mipmap/bluetooth"
            android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"/>
    <EditText
            android:layout_width="236dp"
            android:layout_height="52dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/bluetoothText"
            style="@android:style/Widget.Material.EditText"
            android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
            android:backgroundTint="#BE55E1F3" android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toStartOf="@+id/connectButt" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="52dp" app:layout_constraintTop_toTopOf="parent"
    />
    <ImageView
            android:layout_width="235dp"
            android:layout_height="123dp" app:srcCompat="@drawable/guitar3"
            android:id="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="109dp" app:layout_constraintTop_toBottomOf="@+id/connectButt"
            android:layout_marginBottom="77dp" app:layout_constraintBottom_toTopOf="@+id/textView"/>


</android.support.constraint.ConstraintLayout>