<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:id="@+id/loginLayout"
        android:background="@drawable/teal3">

    <ImageView
            android:layout_width="216dp"
            android:layout_height="157dp"
            tools:srcCompat="@drawable/music_logo"
            android:id="@+id/imageView"
            android:src="@drawable/music_logo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="109dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="96dp"
            android:contentDescription="@string/img"
            android:layout_marginBottom="392dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="170dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText_user"
            tools:text="Email id"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="viewStart"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="21dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.0"
            android:autofillHints="" android:layout_marginBottom="27dp"
            app:layout_constraintBottom_toTopOf="@+id/editText_password"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText_password"
            android:textStyle="bold"
            android:textSize="24sp"
            tools:text="Password"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="25dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@+id/editText_user"
            app:layout_constraintBottom_toTopOf="@+id/btn_login" android:layout_marginBottom="16dp"/>
    <Button
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="89dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="107dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginBottom="184dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="3dp" app:layout_constraintTop_toBottomOf="@+id/editText_password"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="416dp"
            android:layout_height="64dp"
            android:id="@+id/btn_sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginBottom="92dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="19dp" app:layout_constraintTop_toBottomOf="@+id/btn_login"
            app:layout_constraintVertical_bias="1.0" android:visibility="visible"/>
</android.support.constraint.ConstraintLayout>